--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,24 @@
+/* Root */
+
+
 :root {
---main-color:#212121;
---main-color1:#FFFFFF;
---main-color2:#2196F3;
---main-color3:#808080;
---main-color4:rgba(255, 255, 255, 0.6);
---main-color5:#757575;
---main-color6:#F5F4FA;
---main-color7:#2F303A;
---main-color8:#ECECEC;
---main-color9:#EEEEEE;
---main-color10:#188CE8;
---social-bg:#AFB1B8;
+--black:#212121;
+--white:#FFFFFF;
+--blue:#2196F3;
+--grey80:#808080;
+--grey-transparent:rgba(255, 255, 255, 0.6);
+--grey75:#757575;
+--whiteF5:#F5F4FA;
+--dark-grey:#2F303A;
+--whiteECE:#ECECEC;
+--whiteEEE:#EEEEEE;
+--light-grey:#AFB1B8;
 --footer-icon:rgba(255, 255, 255, 0.1);
 --boxes-hover:rgba(0, 0, 0, 0.3);
 }
+/* Root end */
+
+
 /* Container */
 .container {
 width: 1200px;
@@ -33,19 +38,19 @@ fill: currentColor;
 /* Body */
 body {
 font-family: 'Roboto', sans-serif;
-color:var(--main-color);
+color:var(--black);
 font-weight: 400;
 font-size: 14px;
 line-height:1.17;
 letter-spacing: 0.03em;
 background:var(--main-color1);
 }
-/* Ul */
+/* Ul reset */
 ul {
 list-style: none;
 margin:0;
 padding:0;}
-/* A */
+/* A decoration reset */
 a {
 text-decoration: none;
 }
@@ -53,17 +58,10 @@ text-decoration: none;
 img {
 display:block;
 max-width:100%;}
-/* Section */
+/* Section padding */
 .section {
 padding-top:94px;
 padding-bottom:94px;
-}
-.link:hover {
-color:var(--main-color2);
-}
-/* Address icon */
-.address-icon {
-margin-right: 10px;
 }
 /* Hide H1 */
 .visually-hidden {
@@ -78,12 +76,74 @@ clip: rect(0 0 0 0);
 clip-path: inset(50%);
 margin: -1px;
 } 
-/* Current */
-.link.current {
-color: var(--main-color2);
+
+
+/* Навігація (navigation) */
+
+
+/* header */
+header {
+background:var(--white);
+border-bottom: 1px solid var(--whiteECE);
 }
-/* Bg */
-.bg { 
+/* nav flex */
+header div,
+header ul,
+header nav {
+display:flex;
+justify-content:space-between;
+align-items:center;
+gap: 50px;
+}
+/* Webstudio logo */
+.logo {
+font-family: 'Raleway';
+font-weight: 700;
+font-size: 26px;
+color:var(--black);
+line-height: 1.2;
+}
+/* Current page */
+.link.current {
+color: var(--blue);
+}
+/* link hover */
+header nav ul a:hover {
+color:var(--blue);
+}
+/* студія портфоліо контакти text */
+header nav ul a {
+font-weight: 500;
+color:var(--black);
+display: block;
+padding: 32px 0;
+}
+/* email + tel */
+header .contacts a {
+color:var(--grey80);
+font-weight: 500;
+fill: var(--grey75);
+display: flex;
+align-items: center;
+justify-content: center;
+}
+/* email + tel :hover */
+header .contacts a:hover {
+fill: var(--blue);
+color:var(--blue);
+}
+/* Contacts icon margin */
+header .contacts a svg {
+margin-right: 10px;
+}    
+/* Навігація (navigation) end */
+
+
+/* Шапка (hat) */
+
+
+/* hat bg */
+.hat { 
 background:linear-gradient(to right, rgba(47, 48, 58, 0.4), #C4C4C4); 
 background-image:url(../images/bg.jpg);
 background-position: 50% 50%;
@@ -92,35 +152,26 @@ background-size: 1600px 600px;
 padding-top: 200px;
 padding-bottom: 200px;
 }
-/* Header */
-.header {
+/*  hat h1 */
+.hat h1 {
 font-weight: 900;
 font-size: 44px;
 line-height: 1.36;
 text-align: center;
 letter-spacing: 0.06em;
 text-transform: uppercase;
-color: var(--main-color1);
+color: var(--white);
 margin-top: 0;
 margin-bottom: 30px;
 }
-/* Button */
-.button {
-cursor: pointer;
-background:var(--main-color2);
-}
-/* Button hover */
-.button:hover:focus {
-color:var(--main-color2);
-}
-/* Button4 */
-.button4 {
+/* hat button */
+.hat button {
 font-weight: 700;
 font-size: 16px;
 line-height: 1.88;
 letter-spacing: 0.06em;
-background:var(--main-color2);
-color: var(--main-color1);
+background:var(--blue);
+color: var(--white);
 cursor: pointer;
 margin: 0 auto;
 display: block;
@@ -128,64 +179,22 @@ padding: 10px 32px 10px 32px;
 border-radius: 4px;
 border: none;
 }
-.button4:hover:focus {
-background:var(--main-color10);
+.hat button:hover {
+cursor: pointer;
 }
-/* top line bg */
-.topline {
-background:var(--main-color1);
-border-bottom: 1px solid var(--main-color8);
-}
-/* Topnav */
-.flex {
-display:flex;
-justify-content:space-between;
-align-items:center;
-gap: 50px;
-}
-/* WebStudio */
-.logo {
-font-family: 'Raleway';
-font-weight: 700;
-font-size: 26px;
-color:var(--main-color);
-line-height: 1.2;}
-/* Web */
-.web {
-color:var(--main-color2);
-}
-/* Студія */
-.studio {
-font-weight: 500;
-color:var(--main-color);
-display: block;
-padding: 32px 0;}
-/* Портфоліо */
-.portfolio {
-font-weight: 500;
-color:var(--main-color);
-}
-/* Контакти */
-.contacts {
-font-weight: 500;
-color:var(--main-color);
-}
-/* email + tel */
-.address1 {
-color:var(--main-color3);
-font-weight: 500;
-fill: var(--main-color5);
-display: flex;
-align-items: center;
-justify-content: center;}
-.address1:hover {
-fill: var(--main-color2);
-}
-.list-item {
+/* Шапка (hat) end */
+
+
+/* Особливості (special) */
+
+
+/* special ul */
+.special ul {
 display: flex;
 justify-content:space-between;
 }
-.text2 {
+/* special h3 */
+.special h3 {
 font-size: 14px;
 font-weight: 700;
 text-transform: uppercase;
@@ -193,38 +202,20 @@ line-height: 1.14;
 margin: 0 auto;
 margin-bottom: 10px;
 }
-.text3 {
+/* special p */
+.special p {
 font-size: 14px;
 line-height: 1.71;
-color:var(--main-color3);
+color:var(--grey80);
 margin: 0 auto;
 }
-
-
-/* Наша команда */
-
-/* Title */
-.title {
-font-weight: 700;
-font-size: 36px;
-line-height: 1.16;
-text-align: center;
-margin-top:0;
-margin-bottom:50px;
-}
-/* List item1 */
-.list-item1 {
-display:flex;
-flex-direction:row;
-justify-content:space-between;
-margin: 0;
-}
-.lielement {
+/* special ul */
+.special li {
 flex-basis: calc((100% -30px * 3) / 4);
 }
-/* lieelement div */
-.lielement div {
-background-color: var(--main-color6);
+/* special div */
+.special ul li div {
+background-color: var(--whiteF5);
 height: 120px;
 border-radius: 4px;
 margin-right: 30px;
@@ -233,78 +224,104 @@ display: flex;
 justify-content: center;
 align-items: center;
 }
-.lielement .div1 {
+/* last div margin right */
+#div {
 margin-right: 0px;
 }
-/* icon=list */
-.icon-list {
+/* svg */
+.special svg {
 display: block;
 margin:auto;
-width: 50%;
+height: 70px;
+width: 70px;
 }
+/* Особливості (special) end */
+
+
+/* Tasks */
+
+
+/* tasks */
+.tasks {
+padding-top: 0;
+}
+/* title */
+.title {
+font-weight: 700;
+font-size: 36px;
+line-height: 1.16;
+text-align: center;
+margin-top:0;
+margin-bottom:50px;
+}
+/* tasks ul */
+.tasks ul {
+display:flex;
+flex-direction:row;
+justify-content:space-between;
+margin: 0;
+}
+/* Tasks end */
+
+
 /* Наша команда */
+
+
+/* command bg */
 .command {
-background-color: var(--main-color6);
-}   
-/* list-item2 */
-.list-item2 {
+background-color: var(--whiteF5);
+}  
+/* Box li */
+.command li {
+background-color: var(--white);
+}
+/* ul */
+.command ul:not(.list-icons) {
 display: flex;
 justify-content:space-between;
 }
-/* section1 */
-.section1 {
-padding-top: 0;
-}
-/* Наша команда */
-.list1 {
-font-weight: 500;
-font-size: 16px;
-line-height: 1.18;
-}
-/* Box */
-.box {
-background-color: var(--main-color1);
-}
-/* text */
-.text {
+/* text div */
+.command div {
 text-align: center;
 padding-top:30px;
 padding-bottom:30px;
 }
-/* member */
-.member {
+/* member h3 */
+.command h3 {
 font-weight: 500;
 font-size: 16px;
 line-height: 1.18;
-color:var(--main-color);
+color:var(--black);
 margin: 0;
 margin-bottom: 10px;
 }
-/* memberpos */
-.memberpos {
+/* member position p */
+.command p {
 font-size: 16px;
 line-height: 1.18;
-color:var(--main-color5);
+color:var(--grey75);
 margin: 0;
 margin-bottom: 10px;
 }
-/* social links */
-.social-links {
+/* svg */
+.command svg {
 width: 44px;
 height: 44px;
 }
-.ellipse {
+/* a */
+.command a {
 width: 44px;
 height: 44px;
 border-radius:50%;
-background-color: var(--main-color1);
-fill: var(--social-bg);
+background-color: var(--white);
+fill: var(--light-grey);
 }
-.ellipse:hover {
-background-color: var(--main-color2);
-fill: var(--main-color1);
+/* a hover */
+.command a:hover {
+background-color: var(--blue);
+fill: var(--white);
 }
-.list-icons > li {
+.list-icons li {
 display: inline-flex;
 flex-direction: row;
 margin-right: 10px;
@@ -312,9 +329,11 @@ margin-right: 10px;
 .list-icons > li:last-of-type {
 margin-right: 0px;
 }
+/* Наша команда end */
 
 
 /* Clients */
+
 
 /* clients h2 */
 .clients h2 {
@@ -332,7 +351,7 @@ flex-direction:row;
 flex-wrap:nowrap;
 height:92px;
 width: 166px;
-border: 1px solid var(--social-bg);
+border: 1px solid var(--light-grey);
 border-radius: 4px;
 margin: 0;
 margin-right: 30px;
@@ -352,107 +371,112 @@ width:100%;
 display: flex;
 justify-content: center;
 align-items: center;
-fill: var(--social-bg);
+fill: var(--light-grey);
 }
 /* clients li a:hover */
 .clients li a:hover {
-border: 1px solid var(--main-color2);
-fill: var(--main-color2);}
+border: 1px solid var(--blue);
+fill: var(--blue);}
 /* Clients end */
 
 
 /* Footer */
 
 
-.footer {
-background:var(--main-color7); 
+/* footer */
+footer {
+background:var(--dark-grey); 
 padding-top: 60px;
 padding-bottom: 60px;
 }
-.footerhead {
+/* Footer h2 */
+footer h2 {
 font-weight: 700;
 line-height: 1.14;
 font-size: 14px;
 text-transform: uppercase;
-color:var(--main-color1);
+color:var(--white);
 margin:0;
 margin-bottom: 20px;
 }
-.ellipse1 {
+/* a */
+footer .list-icons a {
 width: 44px;
 height: 44px;
 border-radius:50%;
 background-color: var(--footer-icon);
-fill: var(--main-color1);
+fill: var(--white);
 }
-.ellipse1:hover {
-background-color: var(--main-color2);
+/* svg */
+footer .list-icons svg {
+width: 44px;
+height: 44px;
 }
-.footer .ellipse {
-fill:var(--footer-icon);
+/* a:hover */
+footer .list-icons a:hover {
+background-color: var(--blue);
 }
-.footer .ellipse:hover {
-fill:var(--main-color2);
-}
-.footer section {
+footer section {
 display: flex;
 }
-.footer .address {
+/* Address margin */
+footer address {
+margin-top: 20px;
 margin-right: 70px;
 }
-/* Address */
-.address {
-margin-top: 20px;
-}
-/* Liitem3 */
-.liitem3:not(:last-child)  {
+/* address list margin */
+footer address li:not(:last-child)  {
 margin-bottom: 9px;
-}
-/* logo1 */
-.logo-1 {}
-/* м. Київ, пр-т Лесі Українки, 26 */
+} 
+/* address */
 .addpos1 {
 line-height: 1.71;
 font-weight: 500;
-color: var(--main-color1);
+color: var(--white);
 font-style: normal;
-}
-.stud1 {
-color: var(--main-color1);
 }
 /* Address */
 .addpos2 {
 line-height: 1.71;
-color: var(--main-color4);
+color: var(--grey-transparent);
 font-weight: 500;
 font-style: normal;
+}
+/* Studio black */
+.stud1 {
+color: var(--white);
+}
+/* Web white */
+.web {
+color:var(--blue);
 }
 
 
 /* End Footer */
 
 
-
 /* Portfolio */
 
-/* boxbutton */
 
-.boxbutton {
-margin-right:8px;
-}
-.boxbutton:last-of-type {
-margin-right:0;
-}
-/* Button3 */
-.button3 {
+/* Button Portfolio */
+
+
+.button-list {
 display: flex;
 justify-content: center;
 margin-bottom: 50px;
 }  
-/* button2 */
-.button2 {
+/* button margin */
+.button-list li {
+margin-right:8px;
+}
+.button-list li:last-of-type {
+margin-right:0;
+}  
+/* button */
+.button-list button {
 cursor: pointer;
-background:var(--main-color6);
+background:var(--whiteF5);
 font-weight: 500;
 font-size: 16px;
 line-height: 1.62;
@@ -461,48 +485,55 @@ padding: 6px 22px 6px 22px;
 border: none;
 border-radius: 4px;
 }
-/* Button2 hover */
-.button2:hover {
-background-color:var(--main-color2);
-color: var(--main-color1);
+/* Button hover */
+.button-list button:hover {
+background-color:var(--blue);
+color: var(--white);
 box-shadow: 3px 3px 5px 2px var(--boxes-hover);
 }
 
+/* Button Portfolio end */
+
 
 /* Posters */
+
+
 .posters {
 display: flex;
 flex-wrap: wrap;
 gap: 30px;
 }
-/* boxtext */
-.boxtext {
+/* posters li div */
+.posters li div {
 padding: 20px 24px 24px 20px;
-border-bottom: 1px solid var(--main-color9);
-border-right: 1px solid var(--main-color9);
-border-left: 1px solid var(--main-color9);
+border-bottom: 1px solid var(--whiteEEE);
+border-right: 1px solid var(--whiteEEE);
+border-left: 1px solid var(--whiteEEE);
 }
-/* List-item */
-.projname {
+/* posters h2 */
+.posters h2 {
 font-weight: 700;
 font-size: 18px;
 line-height: 2;
 letter-spacing: 0.05em;
 margin:0;
 margin-bottom: 4px;
+color: var(--black);
 }
-/* Description */
-.description {
+/* posters p */
+.posters p {
 font-size: 16px;
 line-height: 1.88;
-color:var(--main-color3);
+color:var(--grey75);
 margin:0;
 }
-/* Boxes */
-.boxes {
+/* posters li */
+.posters li {
 width: calc((100% - 60px) / 3);
 }
 /* posters a:hover */
 .posters a:hover {
 box-shadow: 2px 2px 5px 2px var(--boxes-hover);
 }
+
+/* Posters end */
