--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,7 @@ color:var(--black);
 line-height: 1.2;
 }
 /* Current page */
-.link.current {
+.current {
 color: var(--blue);
 }
 /* link hover */
