--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ font-weight: 400;
 font-size: 14px;
 line-height:1.17;
 letter-spacing: 0.03em;
-background:var(--main-color1);
+background:var(--white);
 }
 /* Ul reset */
 ul {
@@ -132,7 +132,7 @@ justify-content: center;
 header .contacts a:hover,
 header .contacts a:active {
 fill: var(--blue);
-color:var(--blue);
+color: var(--blue);
 }
 /* Contacts icon margin */
 header .contacts a svg {
@@ -271,16 +271,16 @@ margin: 0;
 background-color: var(--whiteF5);
 }  
 /* Box li */
-.command li {
+.command-li {
 background-color: var(--white);
 }
 /* ul */
-.command ul:not(.list-icons) {
+.command-ul:not(.list-icons) {
 display: flex;
 justify-content:space-between;
 }
 /* text div */
-.command div {
+.command-div {
 text-align: center;
 padding-top:30px;
 padding-bottom:30px;
@@ -401,11 +401,6 @@ height: 44px;
 border-radius:50%;
 background-color: var(--footer-icon);
 fill: var(--white);
-}
-/* svg */
-footer .list-icons svg {
-width: 44px;
-height: 44px;
 }
 /* a:hover */
 footer .list-icons a:hover {
